# entromatica

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: blank_issue.md  bug_report.yml  feature_request.yml  tracking_issue.yml
.github/workflows/: ci.yml  lints.yml  release-please.yml  release.yml  semver.yml  tests.yml
scripts/: README.md  find_comparison_version.sh  get_current_version.sh  is_version_already_uploaded.sh
src/: backend.rs  cache.rs  cached_function.rs  error.rs  global_errors.rs  hash.rs  lib.rs  parameter.rs  prelude.rs  resource.rs  resources.rs  rules.rs  simulation.rs  state.rs  units.rs
src/models/: rules.rs
tests/: populations.rs  random_walk.rs
