[package]
name = "entromatica"
version = "0.6.0"
edition = "2021"
authors = ["Daniel Meiborg"]
license = "MIT OR Apache-2.0"
description = "A simulation library for markov chain with uniform steady state distributions centered around their entropy"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
hashbrown = { version = "0.13.1", features = ["rayon"] }
itertools = "0.10.5"
petgraph = "0.6.2"
rayon = "1.5"