[package]
name = "entromatica"
version = "0.16.0"
edition = "2021"
authors = ["Daniel Meiborg"]
license = "MIT OR Apache-2.0"
description = "A simulation library for markov chains with a uniform steady state distribution centered around their entropy"
repository = "https://github.com/DanielMeiborg/entromatica"
documentation = "https://docs.rs/entromatica"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.67"
derive_more = "0.99.17"
hashbrown = { version = "0.13.1", features = ["rayon"] }
itertools = "0.10.5"
petgraph = "0.6.2"
rayon = "1.5"
thiserror = "1.0.38"
