[package]
name = "entromatica"
version = "2.2.0"
edition = "2021"
authors = ["Daniel Meiborg"]
license = "MIT OR Apache-2.0"
description = "Entromatica is a library for constructing, simulating and analyzing markov chains."
repository = "https://github.com/DanielMeiborg/entromatica"
documentation = "https://docs.rs/entromatica"
homepage = "https://entromatica.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.67"
derive_more = "0.99.17"
hashbrown = { version = "0.13.1", features = ["rayon", "serde"] }
itertools = "0.10.5"
ndarray = "0.15.6"
petgraph = "0.6.2"
rayon = "1.5"
serde = { version = "1.0.152", features = ["derive"]}
thiserror = "1.0.38"

[dev-dependencies]
serde_json = "1.0.91"
